Pattern matching code updates for Java 17